Update image sources in index.html
changed the reference from myphoto2 to myphoto3

--- a/index.html
+++ b/index.html
@@ -340,10 +340,10 @@ body {
             <!--Middle image-->
             <picture class="cs-picture cs-picture2">
                 <!--Mobile Image-->
-                <source media="(max-width: 600px)" srcset="https://raw.githubusercontent.com/abemessing/my-website-images/refs/heads/main/myphoto2.JPG">
+                <source media="(max-width: 600px)" srcset="https://raw.githubusercontent.com/abemessing/my-website-images/refs/heads/main/myphoto3.jpg">
                 <!--Tablet and above Image-->
-                <source media="(min-width: 601px)" srcset="https://raw.githubusercontent.com/abemessing/my-website-images/refs/heads/main/myphoto2.JPG">
-                <img loading="lazy" decoding="async" src="https://raw.githubusercontent.com/abemessing/my-website-images/refs/heads/main/myphoto2.JPG" alt="kid" width="320" height="320">
+                <source media="(min-width: 601px)" srcset="https://raw.githubusercontent.com/abemessing/my-website-images/refs/heads/main/myphoto3.jpg">
+                <img loading="lazy" decoding="async" src="https://raw.githubusercontent.com/abemessing/my-website-images/refs/heads/main/myphoto3.jpg" alt="kid" width="320" height="320">
             </picture>
             <!--Flower-->
             <img class="cs-flower" loading="lazy" decoding="async" src="https://csimg.nyc3.cdn.digitaloceanspaces.com/Images/Graphics/flower3.svg" alt="graphic" width="153" height="148" aria-hidden="true">
