Update title and description in index.html

--- a/index.html
+++ b/index.html
@@ -358,9 +358,9 @@ body {
         </div>
         <div class="cs-content">
             <span class="cs-topper">About</span>
-            <h2 class="cs-title">Copywriter.<br> Data Analyst. <br> Digital Storyteller.</h2>
+            <h2 class="cs-title"> Abe Messing </h2>
             <p class="cs-text">
-                    Abe Messing          </p>
+                    Copywriter. Data Analyst. Digital Storyteller. </p>
             <ul class="cs-ul">
                 <li class="cs-li">
                     <picture class="cs-li-picture">
